# SuffixTree

./: CMakeLists.txt  README.md  main.cpp
src/: ContAllocator.h  ContBuilder.cpp  ContBuilder.h  ContBuilderKeys.cpp  ContBuilderKeys.h  MemAllocHook.cpp  MemAllocHook.h  StaticContBuilder.cpp  StaticContBuilder.h  StaticSuffixTree.h  StringArena.cpp  StringArena.h  SuffixTree.cpp  SuffixTree.h  SuffixTreeImpl.h  SuffixTreeTraits.cpp  SuffixTreeTraits.h  hpUtils.cpp  hpUtils.h  stdafx.h
test/: NodeAllocatorTest.cpp  StaticSuffixTreeTest.cpp  SuffixTreeNLevelTest.cpp  SuffixTreeTest.cpp  memUsageTest.cpp  performanceTest.cpp  testUtils.cpp  testUtils.h
